Исправляю лажу Feya в файле проекта

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -427,9 +427,7 @@
     <DCCReference Include="RegionProcess\u_ThreadExportToTar.pas" />
     <DCCReference Include="RegionProcess\u_ThreadExportToZip.pas" />
     <DCCReference Include="RegionProcess\u_ThreadExportYaMaps.pas" />
-    <DCCReference Include="RegionProcess\u_ThreadExportYaMapsNew.pas">
-      <Form>$R .\Resources\VersionInfo.res</Form>
-    </DCCReference>
+    <DCCReference Include="RegionProcess\u_ThreadExportYaMapsNew.pas" />
     <DCCReference Include="RegionProcess\u_ThreadGenPrevZoom.pas" />
     <DCCReference Include="RegionProcess\u_ThreadMapCombineBase.pas" />
     <DCCReference Include="RegionProcess\u_ThreadMapCombineBMP.pas" />
