--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -181,6 +181,8 @@
     <DCCReference Include="i_AntiBan.pas" />
     <DCCReference Include="i_BackgroundTask.pas" />
     <DCCReference Include="i_BitmapLayerProvider.pas" />
+    <DCCReference Include="i_BitmapMarker.pas" />
+    <DCCReference Include="i_BitmapMarkerProviderSimpleConfig.pas" />
     <DCCReference Include="i_BitmapPostProcessingConfig.pas" />
     <DCCReference Include="i_BitmapTileSaveLoad.pas" />
     <DCCReference Include="i_CalcLineLayerConfig.pas" />
@@ -446,6 +448,12 @@
     <DCCReference Include="u_BackgroundTask.pas" />
     <DCCReference Include="u_BackgroundTaskLayerDrawBase.pas" />
     <DCCReference Include="u_BaseGridConfig.pas" />
+    <DCCReference Include="u_BitmapMarker.pas" />
+    <DCCReference Include="u_BitmapMarkerProviderSimpleArrow.pas" />
+    <DCCReference Include="u_BitmapMarkerProviderSimpleBase.pas" />
+    <DCCReference Include="u_BitmapMarkerProviderSimpleConfig.pas" />
+    <DCCReference Include="u_BitmapMarkerProviderSimpleConfigStatic.pas" />
+    <DCCReference Include="u_BitmapMarkerProviderSimpleSquare.pas" />
     <DCCReference Include="u_BitmapPostProcessingConfig.pas" />
     <DCCReference Include="u_BitmapPostProcessingConfigStatic.pas" />
     <DCCReference Include="u_BmpUtil.pas" />
