Новый класс для хранения выделения прямоугольником

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -263,6 +263,7 @@
     <DCCReference Include="i_ScaleLineConfig.pas" />
     <DCCReference Include="i_SearchResultPresenter.pas" />
     <DCCReference Include="i_SelectionPolygonLayerConfig.pas" />
+    <DCCReference Include="i_SelectionRect.pas" />
     <DCCReference Include="i_SelectionRectLayerConfig.pas" />
     <DCCReference Include="i_Sensor.pas" />
     <DCCReference Include="i_SensorList.pas" />
@@ -654,6 +655,7 @@
     <DCCReference Include="u_ScaleLineConfig.pas" />
     <DCCReference Include="u_SearchResults.pas" />
     <DCCReference Include="u_SelectionPolygonLayerConfig.pas" />
+    <DCCReference Include="u_SelectionRect.pas" />
     <DCCReference Include="u_SelectionRectLayerConfig.pas" />
     <DCCReference Include="u_SensorBase.pas" />
     <DCCReference Include="u_SensorBatteryStatus.pas" />
