--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -162,6 +162,7 @@
     <DCCReference Include="i_Datum.pas" />
     <DCCReference Include="i_DownloadChecker.pas" />
     <DCCReference Include="i_DownloadInfoSimple.pas" />
+    <DCCReference Include="i_DownloadRequest.pas" />
     <DCCReference Include="i_DownloadResult.pas" />
     <DCCReference Include="i_DownloadResultFactory.pas" />
     <DCCReference Include="i_DownloadResultTextProvider.pas" />
@@ -276,6 +277,7 @@
     <DCCReference Include="i_StringHistory.pas" />
     <DCCReference Include="i_Thread.pas" />
     <DCCReference Include="i_TileDownloaderConfig.pas" />
+    <DCCReference Include="i_TileDownloadRequest.pas" />
     <DCCReference Include="i_TileDownloadResult.pas" />
     <DCCReference Include="i_TileDownloadResultFactoryProvider.pas" />
     <DCCReference Include="i_TileDownlodSession.pas" />
@@ -681,6 +683,7 @@
     <DCCReference Include="u_TileDownloaderThreadBase.pas" />
     <DCCReference Include="u_TileDownloaderUI.pas" />
     <DCCReference Include="u_TileDownloaderUIOneTile.pas" />
+    <DCCReference Include="u_TileDownloadRequest.pas" />
     <DCCReference Include="u_TileDownloadResult.pas" />
     <DCCReference Include="u_TileDownloadResultFactoryProvider.pas" />
     <DCCReference Include="u_TileErrorInfo.pas" />
