Добавил слой отображающий все результаты поиска.

--- a/Resources/Common/Common.rc
+++ b/Resources/Common/Common.rc
@@ -5,3 +5,4 @@ ICONIII RCDATA "ICONIII.png"
 MAINMAP RCDATA "MAINMAP.png"
 VRULLER RCDATA "VRULLER.png"
 VTUMBLER RCDATA "VTUMBLER.png"
+FOUNDPNT RCDATA "FOUNDPNT.png"
