--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -141,6 +141,7 @@
     </DCCReference>
     <DCCReference Include="i_ActiveMapsConfig.pas" />
     <DCCReference Include="i_AntiBan.pas" />
+    <DCCReference Include="i_ARGBToPaletteConverter.pas" />
     <DCCReference Include="i_BackgroundTask.pas" />
     <DCCReference Include="i_BitmapLayerProvider.pas" />
     <DCCReference Include="i_BitmapMarker.pas" />
@@ -423,6 +424,7 @@
     <DCCReference Include="u_ActiveMapTBXItem.pas" />
     <DCCReference Include="u_ActivMapWithLayers.pas" />
     <DCCReference Include="u_AntiBanStuped.pas" />
+    <DCCReference Include="u_ARGBToPaletteConverter.pas" />
     <DCCReference Include="u_BackgroundTask.pas" />
     <DCCReference Include="u_BackgroundTaskLayerDrawBase.pas" />
     <DCCReference Include="u_BaseGridConfig.pas" />
