--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -214,6 +214,7 @@
     <DCCReference Include="i_MainGeoCoderConfig.pas" />
     <DCCReference Include="i_MainMemCacheConfig.pas" />
     <DCCReference Include="i_MainWindowPosition.pas" />
+    <DCCReference Include="i_MapAbilitiesConfig.pas" />
     <DCCReference Include="i_MapCalibration.pas" />
     <DCCReference Include="i_MapLayerGPSMarkerConfig.pas" />
     <DCCReference Include="i_MapLayerGPSTrackConfig.pas" />
@@ -275,6 +276,7 @@
     <DCCReference Include="i_SensorViewListGenerator.pas" />
     <DCCReference Include="i_SimpleDownloader.pas" />
     <DCCReference Include="i_SimpleFactory.pas" />
+    <DCCReference Include="i_SimpleTileStorageConfig.pas" />
     <DCCReference Include="i_StartUpLogoConfig.pas" />
     <DCCReference Include="i_StatBarConfig.pas" />
     <DCCReference Include="i_StaticTreeBuilder.pas" />
@@ -580,6 +582,8 @@
     <DCCReference Include="u_MainMemCacheConfig.pas" />
     <DCCReference Include="u_MainWindowPositionConfig.pas" />
     <DCCReference Include="u_MainWindowToolbarsLock.pas" />
+    <DCCReference Include="u_MapAbilitiesConfig.pas" />
+    <DCCReference Include="u_MapAbilitiesConfigStatic.pas" />
     <DCCReference Include="u_MapCalibrationDat.pas" />
     <DCCReference Include="u_MapCalibrationKml.pas" />
     <DCCReference Include="u_MapCalibrationListBasic.pas" />
@@ -681,6 +685,8 @@
     <DCCReference Include="u_SensorViewListGeneratorStuped.pas" />
     <DCCReference Include="u_SensorViewTextTBXPanel.pas" />
     <DCCReference Include="u_ShortcutManager.pas" />
+    <DCCReference Include="u_SimpleTileStorageConfig.pas" />
+    <DCCReference Include="u_SimpleTileStorageConfigStatic.pas" />
     <DCCReference Include="u_StartUpLogoConfig.pas" />
     <DCCReference Include="u_StatBarConfig.pas" />
     <DCCReference Include="u_StaticTreeBuilderBase.pas" />
